fix error and end scrollBar

--- a/src/components/history/history.module.css
+++ b/src/components/history/history.module.css
@@ -1,6 +1,6 @@
 .containerHistory {
     background: var(--first-color);
-    height: 170vh;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 .scrollAndTittle {
@@ -8,4 +8,16 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
+}
+
+.scrollBar {
+    margin: 15px;
+    height: 10px;
+    width: 100%;
+    background: white;
+}
+
+.tittleScrollBar {
+    font-size: 2vmin;
+    font-weight: 600;
 }
